# black_splat

./: .gitignore  Cargo.toml  README.md  Readme.md  launch.sh  package-lock.json  package.json  setup.sh
engine_assets/shaders/: ambient_denoise.wgsl  ambient_probe.wgsl  cloud_sprite.wgsl  gaussian_splat.wgsl  gaussian_splat_radix.wgsl  gbuffer.wgsl  light_directional.wgsl  light_point.wgsl  light_skylight.wgsl  light_spot.wgsl  postprocess_uber.wgsl  projected_shadow_directional.wgsl  projected_shadow_spot.wgsl  shadow_catcher_overlay.wgsl  shadow_depth.wgsl  shadow_mask_cascades.wgsl  shadow_mask_spot.wgsl  skylight_prefilter.wgsl  skylight_sh_project.wgsl  splat_composite.wgsl  ui_overlay.wgsl
examples/: serve.py  serve_tunnel.py
examples/2d/: Cargo.toml  build_wasm.bat  build_wasm_tunneled.bat  index.html
examples/2d/src/: example_game.rs  main.rs
examples/3d/: Cargo.toml  build_wasm.bat  build_wasm_tunneled.bat  index.html
examples/3d/src/: example_game.rs  game_actors.rs  game_config.txt  game_vfx.rs  main.rs
examples/mujoco_test/: Cargo.toml  build.rs  index.html
examples/mujoco_test/.cargo/: config.toml
examples/mujoco_test/game_assets/: scene.xml
examples/mujoco_test/src/: example_game.rs  game_config.txt  main.rs
examples/splat/: Cargo.toml  build_wasm.bat  build_wasm_tunneled.bat  index.html
examples/splat/.cargo/: config.toml
examples/splat/game_assets/models/: quad.glb  sphere.glb
examples/splat/game_assets/models/Barrel/: barrel_hq.glb
examples/splat/game_assets/mujoco/: test_scene.xml
examples/splat/game_assets/mujoco/franka_emika_panda/: panda.xml
examples/splat/game_assets/mujoco/trajectories/: lift_demo_0.json  square_demo_141.json  tool_hang_demo_56.json
examples/splat/game_assets/scenes/: panda_scene.json
examples/splat/game_assets/splats/: README.txt
examples/splat/resources/materials/: Chrome.json  Material_3.json  Matte.json  Plastic.json
examples/splat/resources/particles/: Embers.json  Fire.json  Smoke.json
examples/splat/src/: editor_config.rs  example_game.rs  game_config.txt  main.rs  resource_library.rs
launcher/: README.md  build.bat  build.py  build.sh  index.html  launch.bat  launch.sh  serve.py  serve_tunnel.py  server.py  stop.bat
src/: assets.rs  collision.rs  config.rs  editor.rs  engine.rs  fly_camera.rs  game_object.rs  idb.js  idb.rs  input.rs  kb_assets.rs  kb_config.rs  kb_game_object.rs  kb_input.rs  kb_renderer.rs  kb_resource.rs  lib.rs  main.rs  mujoco.rs  renderer.rs  resource.rs  text_agent.rs  touch_pads.rs  trajectory.rs  utils.rs
src/passes/: ambient.rs  bullet_hole.rs  deferred.rs  gaussian_splat.rs  line.rs  model.rs  postprocess.rs  splat_composite.rs  sprite.rs  sunbeam.rs
src/render_groups/: bullet_hole.rs  gaussian_splat.rs  kb_bullet_hole_group.rs  kb_gaussian_splat_group.rs  kb_line_group.rs  kb_model_group.rs  kb_postprocess_group.rs  kb_sprite_group.rs  kb_sunbeam_group.rs  kb_ui_group.rs  line.rs  model.rs  postprocess.rs  sprite.rs  sunbeam.rs
tools/: robomimic_to_trajectory.py
