[package]
name = "black_splat"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.24"
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cfg-if = "1.0.0"
cgmath = { version = "0.18", features = ["serde"] }
# In-engine GUI (game HUDs and the editor).  egui-wgpu/egui-winit are the
# official adapters and must version-match egui, wgpu, and winit.
egui = "0.35"
egui-wgpu = "0.35"
env_logger = "0.10"
getrandom = { version = "0.2", features = ["js"] }
gltf="1.4.0"
instant = { version = "0.1.12", features = [ "wasm-bindgen"] }
json = "0.12.4"
load_file = "1.0.1"
log = "0.4"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
winit = "0.30.13"
wgpu_text = "29"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "29"
egui-winit = "0.35"
tracy_full = {version = "1.7.1", features = ["enable"]}
# FFI to the native MuJoCo library, backing src/mujoco.rs on native targets.
# Optional (behind the "mujoco" feature) so games that don't use it aren't
# forced to link/download MuJoCo.
mujoco-rs = { version = "5.0.0", optional = true, default-features = false, features = ["auto-download-mujoco"] }
# Wavefront OBJ + MTL parsing, used by Model::from_obj_path (src/passes/model.rs)
# to load MuJoCo mesh geoms straight from the .obj files MJCF <mesh> assets
# reference, with materials resolved from the companion .mtl.
tobj = "4.0"
# Minimal MJCF re-parse in src/mujoco.rs to resolve each <mesh>'s source .obj
# path (mujoco-rs's own mesh_pathadr only exposes the raw, un-resolved `file`
# attribute -- see the comment on `MujocoScene::collect_mesh_paths`).
roxmltree = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2.0", features = [] }
reqwest = { version = "0.11" }
js-sys = "0.3"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
# The default "clipboard" feature pulls arboard, which doesn't build for
# wasm32-unknown-unknown; egui still handles copy/paste through web events.
egui-winit = { version = "0.35", default-features = false, features = ["links"] }
wgpu = { version = "29", features = ["webgl"] }
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "HtmlInputElement",
    # For the text agent (virtual keyboard support, see src/text_agent.rs):
    "HtmlElement",
    "CssStyleDeclaration",
    "EventTarget",
    "InputEvent",
    "KeyboardEvent",
    "Navigator",
]}

[features]
wasm_include_2d = [] # feature has no explicit dependencies
wasm_include_3d = [] # feature has no explicit dependencies
wasm_include_key = [] # feature has no explicit dependencies
# MJCF loading + wireframe rendering (src/mujoco.rs). Native drives MuJoCo
# in-process via mujoco-rs; wasm bridges to DeepMind's official
# `@mujoco/mujoco` wasm build running as a sibling JS-driven module (see the
# module doc comment in src/mujoco.rs).
mujoco = ["dep:mujoco-rs"]