[package]
name = "kb_engine_splat_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
pollster = "0.3"
# Native + browser file-open dialog for the "load your own .ply" button.  On
# wasm it wraps an HTML file input, so the picked file never leaves the device.
rfd = "0.14"

kb_engine3 = { path = "../../" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"
# The engine's log! macro expands to web_sys::console at the call site.
web-sys =  { version = "0.3.69", features = [] }
