[package]
name = "black_splat_splat_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
pollster = "0.3"
# Native + browser file-open dialog for the "load your own .ply" button.  On
# wasm it wraps an HTML file input, so the picked file never leaves the device.
rfd = "0.14"
# Scene save/load (JSON).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

black_splat = { path = "../../", features = ["mujoco"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
# Untyped JS interop for the File System Access API save dialog (the typed
# web-sys bindings for it sit behind the unstable-APIs cfg flag).
js-sys = "0.3"
# The engine's log! macro expands to web_sys::console at the call site.
# Window/Navigator are for the touch-device check (GUI sizing); Storage is the
# localStorage that persists the startup scene. Document/Element/
# HtmlInputElement/File/FileList/Blob back the MuJoCo model folder import
# (see `import_mujoco_model_folder`), which drives an <input webkitdirectory>
# directly because rfd's web backend has no folder picker.
web-sys =  { version = "0.3.69", features = [
    "Window",
    "Navigator",
    "Storage",
    "Document",
    "Element",
    "HtmlInputElement",
    "File",
    "FileList",
    "Blob",
] }
